<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Accounts</string>

	<!-- File Driver Names -->
	<string name="QIF">QIF</string>

	<!-- Tabs -->	
	<string name="account_tab">Accounts</string>
	<string name="category_tab">Categories</string>
	<string name="report_tab">Reports</string>
	<string name="empty_account_list">\nUse the Menu to create a new Account.\n\nTo perform an action on an existing Account, Long Click on it.</string>
	<string name="empty_operation_list">\nUse the Menu to import Operations in this account.\n\nTo perform an action on an existing Operation, Long Click on it</string>
	<string name="empty_category_list">\nUse the Menu to create a new Category.\n\nTo perform an action on an existing Category, Long Click on it</string>
	<string name="empty_report_list">\nUse the Menu to create a new Report.\n\nTo perform an action on an existing Report, Long Click on it</string>
	
	<!-- Account -->
	<string name="edit_account_title">Edit Account</string>
	<string name="delete_account_title">Delete Account</string>
	<string name="account_name">Account Name</string>
	<string name="account_balance">Balance</string>
	<string name="account_total_balance">Total Accounts Balance:</string>
	<string name="add_account">Add Account</string>
	<string name="currency">Currency</string>
	<string name="exclude_from_total">Exclude from Total Balance</string>

	<!-- Operations -->
	<string name="edit_operation_title">Edit Operation</string>
	<string name="operations_title">Transactions: </string>
	<string name="import_operation">Import from File</string>
	<string name="period_change">Change Period</string>
	<string name="instant_chart">Instant Chart</string>
	<string name="operation_name">Name</string>
	<string name="operation_amount">Amount</string>
	<string name="operation_date">Date</string>
	<string name="operation_balance_at_start">Balance at Start of %1$s:</string>	
	<string name="operation_balance_at_end">Balance at End of %1$s:</string>	

	<!-- Categories -->
	<string name="category_unknown">Other</string>
	<string name="category_name">Category Name</string>
	<string name="category_parent">Parent Category</string>
	<string name="category_rules">Rules</string>
	<string name="add_category">Add Category</string>
	<string name="edit_category_title">Edit Category</string>
	<string name="delete_category_title">Delete Category</string>
	<string name="icon">Icon</string>	
	<string name="choose_icon">Choose an Icon</string>	

	<!-- Report -->
	<string name="report_name">Report Name</string>
	<string name="report_type">Report Type</string>
	<string name="report_period_type">Period Type</string>
	<string name="report_categories">Categories</string>
	<string name="add_report">Add Report</string>
	<string name="edit_report_title">Edit Report</string>
	<string name="delete_report_title">Delete Report</string>
	
	<string name="report_type_0">Category Amount by Month</string>
	<string name="report_type_1">Daily Balance</string>
	<string name="report_type_2">Category Amount</string>
	<string name="report_type_3">Trend</string>

	<string name="report_period_type_0">This Year</string>
	<string name="report_period_type_1">Last Year</string>
	<string name="report_period_type_2">Last 6 Months</string>
	<string name="report_period_type_3">Custom Range</string>

	<string name="income">Income</string>
	<string name="expense">Expense</string>

	<!-- Button -->
	<string name="ok">Ok</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="imports">Import</string>

	<!-- File drivers -->
	<string name="install_file_chooser_title">Need an Application.</string>
	<string name="install_file_chooser_message">To be able to select a file, you need to install for example AndExplorer. Click OK to install it, or Cancel.</string>
	<string name="file_import_choice_title">Choose a file driver</string>
	<string name="file_import_title">Define import parameters</string>
	<string name="nb_imported_operation">%1$d operation(s) have been imported.</string>

	<string name="FIELD">Field Separator</string>
	<string name="DATE_FORMAT">Date Format</string>
	<string name="DECIMAL">Decimal Separator</string>
	<string name="FROM">From</string>
	<string name="TO">To</string>
	<string name="FILE">File to Import</string>
	<string name="DATA_FROM_FIRST_LINE">Data Starts from First Line</string>

	<string name="mandatory_field">\'%1$s\' is mandatory.</string>

	<!-- Period -->
	<string name="period_this_month">This Month - %1$s</string>
	<string name="period_last_month">Last Month - %1$s</string>
	<string name="period_custom">Custom Date Range</string>
	<string name="period_custom_label">%1$s to %2$s</string>
	<string name="nb_record">%1$s Record(s)</string>
	<string name="period_start_date">Enter Start Date</string>
	<string name="period_end_date">Enter End Date</string>
</resources>
