<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="#FFFFFF">
	<ScrollView android:layout_weight="1" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:background="#FFFFFF" android:layout_marginLeft="3px" android:layout_marginRight="3px">
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/account_name" android:textColor="#000000"/>
			<EditText android:id="@+id/txtAccountName"
				android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
			
			
<LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent">
<LinearLayout android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent" android:layout_weight="1">
<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_balance" android:textColor="#000000"/>
			<EditText android:id="@+id/txtBalance" 
				android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="numberSigned|numberDecimal" android:gravity="right" android:text="0"></EditText>
</LinearLayout>
<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical">
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/currency" android:textColor="#000000"/><Spinner android:id="@+id/cbCurrency" android:layout_width="wrap_content" android:layout_height="wrap_content"></Spinner>
</LinearLayout>
</LinearLayout>

<CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/exclude_from_total" android:textColor="#000000" android:id="@+id/chkExclude"></CheckBox>
</LinearLayout>



</ScrollView><LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent">
<Button android:text="@string/save" android:id="@+id/btSave" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"></Button>
<Button android:text="@string/cancel" android:id="@+id/btCancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"></Button>
</LinearLayout>
</LinearLayout>
