<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="#FFFFFF">
	<ScrollView android:layout_weight="1" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:background="#FFFFFF"
		android:layout_marginLeft="3px" android:layout_marginRight="3px">
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="#000000"
				android:text="@string/operation_name" />
			<EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/txtOperationName" android:inputType="textMultiLine" android:lines="3"></EditText>


			<LinearLayout android:layout_height="wrap_content"
				android:layout_width="fill_parent">
				<LinearLayout android:layout_height="wrap_content"
					android:orientation="vertical" android:layout_weight="1" android:layout_width="fill_parent">
					<TextView android:layout_width="fill_parent"
						android:layout_height="wrap_content" android:textColor="#000000"
						android:text="@string/operation_amount" />
					<EditText android:layout_width="fill_parent" android:layout_height="wrap_content"
						android:inputType="numberSigned|numberDecimal" android:gravity="right"
						android:text="0" android:id="@+id/txtAmount"></EditText>
				</LinearLayout>
				<LinearLayout android:layout_height="wrap_content" android:orientation="vertical" android:layout_weight="1" android:layout_width="fill_parent">
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:text="@string/operation_date"
						android:textColor="#000000" android:layout_weight="1"/>
					<view class="org.amphiprion.myaccount.view.DatePickerSpinner"
						android:id="@+id/cbDateOperation" android:layout_height="wrap_content" android:layout_width="fill_parent"/>
				</LinearLayout>
			</LinearLayout>

			
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/category_name" android:textColor="#000000"></TextView>

<Spinner android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/cbCategory"></Spinner>
</LinearLayout>



	</ScrollView>
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<Button android:text="@string/save" android:id="@+id/btSave"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1"></Button>
		<Button android:text="@string/cancel" android:id="@+id/btCancel"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1"></Button>
	</LinearLayout>
</LinearLayout>
